customize Long Haul

--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -229,7 +229,7 @@ POST STYLING
 			content: "";
 			position: absolute;
 			top: -1.25em;
-			background: $background-color;
+			background: $primary-color;
 			display: block;
 			height: 2px;
 			width: 150px;
@@ -240,7 +240,7 @@ POST STYLING
 			content: "";
 			position: absolute;
 			bottom: -1.25em;
-			background: $background-color;
+			background: $primary-color;
 			display: block;
 			height: 2px;
 			width: 150px;
